# lllm-zoomcamp-2026

./: .gitignore  README.md  homework_01_agentic_rag.ipynb  pyproject.toml
homework_02_vector_search/: .gitignore  README.md  homework_02_vector_search.ipynb  pyproject.toml
homework_03_orchestration/: .env.example  .gitignore  README.md  results.md
homework_03_orchestration/flows/: 4_simple_agent_three_sentences.yaml
homework_04_evaluation/: .gitignore  README.md  evaluation_utils.py  homework_04_evaluation.ipynb  pyproject.toml  rag_helper.py  results.md
homework_05_monitoring/: .gitignore  README.md  analyze_traces.py  homework_05_monitoring.ipynb  monitoring.py  pyproject.toml  rag_helper.py  results.md  starter.py
workshop_dlt/: .env.example  .gitignore  README.md  agent.py  analyze_duckdb.py  dlt_workshop.ipynb  ingest.py  load_logfire_traces.py  main.py  pyproject.toml  results.md  run_logfire_agent.py
