[project]
name = "homework-02-vector-search"
version = "0.1.0"
description = "LLM Zoomcamp 2026 Homework 2: Vector Search with the ONNX embedder"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitsource",
    "minsearch",
    "numpy",
    "onnxruntime",
    "tokenizers",
    "tqdm",
]

[dependency-groups]
dev = [
    "huggingface-hub>=1.21.0",
    "jupyter>=1.1.1",
]
