[project]
name = "homework-04-evaluation"
version = "0.1.0"
description = "LLM Zoomcamp 2026 Homework 4: Evaluation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitsource",
    "jupyter>=1.1.1",
    "minsearch",
    "nbformat>=5.10.4",
    "numpy",
    "onnxruntime",
    "openai>=1.99.0",
    "pandas",
    "pydantic>=2.11.0",
    "python-dotenv>=1.0.1",
    "tokenizers",
]
