[project]
name = "homework-05-monitoring"
version = "0.1.0"
description = "LLM Zoomcamp 2026 Homework 5: Monitoring"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitsource",
    "jupyter>=1.1.1",
    "minsearch",
    "nbformat>=5.10.4",
    "openai>=1.99.0",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "pandas",
    "python-dotenv>=1.0.1",
]
